some css and js upgraded

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html{
     box-sizing: border-box;
+    background-image: linear-gradient(to right, rgb(255, 0, 0) 33%, white 33%, white 66%, green 66%, green 100%);
 }
 h1{
 margin-bottom: 70px;
@@ -46,4 +47,13 @@ justify-content: space-around;
 
 .outputWinner{
     text-align: center;
+}
+
+.btn2{
+    text-align: center;
+    margin-top: 30px;
+}
+
+.hidden{
+    display:none
 }
